--- a/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/lang/Launcher.properties
@@ -67,7 +67,7 @@ launcher.checkForUpdates=Check for updates
 launcher.options=Options...
 launcher.updateLauncher=Update launcher...
 launcher.downloadUpdates=Download modpack updates
-launcher.title=SkyHeroes Launcher (v{0})
+launcher.title=M0R's Launcher (v{0})
 launcher.appTitle=SkyHeroes Launcher
 launcher.refreshList=Refresh list
 launcher.checkingTitle=Getting available modpacks...
